			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2606 2004/05/19 09:13:06 jinmei Exp $

<200405>
2004-05-19  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/nd6.c (nd6_output): simply returned an error
	if rtalloc1() provided a route to an unexpected interface.
	Based on a discussion for KAME PR 615 with Luigi Rizzo.

2004-05-18  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* {net,open}bsd/include/netdb.h (AI_ADDRCONFIG): defined the flag.

2004-05-16  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* *bsd/include/netdb.h: added a new error code EAI_OVERFLOW
	defined in RFC3493.
	* kame/kame/libinet6/getaddrinfo.c: supported EAI_OVERFLOW in
	gai_strerror().
	* kame/kame/libinet6/getnameinfo.c: use EAI_OVERFLOW (instead of
	EAI_MEMORY) for the error of short buffers.

2004-05-14  SUZUKI, Shinsuke  <suz@crl.hitachi.co.jp>
	* kame/kame/pim6sd/mldv2_proto.c: receives MLDv2 TO_EX{NULL} report
	properly.

2004-05-14  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/dhcp6: added a set of bug fixes and cleanups based on
	comments and patches from Hiro Muraji:
	- avoided casting when pointers can be unnaturally aligned,
	  for alignment sensitive architectures
	- fixed the bug that IA_PD sub options were not correctly
	  recognized when more than one option was provided
	- fixed the bug that dhcp6s could crash when three or more
	  domain-name(-servers) were specified in separate option statements.
	- dropped DHCPv6 packets when IA_PD_PREFIX appears outside of
	  IA_PD (this seems to be a saner behavior)
	- corrected some log message formats

<200404>
2004-04-27  SUZUKI, Shinsuke  <suz@crl.hitachi.co.jp>
	* kame/sys/netinet6/in6_msf.c: fixed an IPv6 per-interface MSF 
	calculation failure when MSF is in EXCLUDE mode

2004-04-22  SUZUKI, Shinsuke  <suz@crl.hitachi.co.jp>
	* kame/sys/netinet/in_msf.c, kame/sys/netinet6/in6_msf.c: silently
	ignore an advanced MSF-API call (instead of returning EINVAL) when